--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "exceljs": "^4.4.0",
     "express": "^4.19.2",
     "fs": "^0.0.1-security",
     "jsonwebtoken": "^9.0.2",
     "moment": "^2.30.1",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.0",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
     "pdfkit": "^0.15.0"
