--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 MONGODB_URI=mongodb+srv://gigahuda12:gigajundan12@cluster0.qmkdvrd.mongodb.net/DPSI_GIGA?retryWrites=true&w=majority&appName=Cluster0
 EMAIL_USER=mr.gone2025@gmail.com
-EMAIL_PASS=diasudahpergi0
+EMAIL_PASS=fpii kzyy ahbv xrze
 JWT_SECRET=fadlilahsayang
 PORT=5000
